rename custom field

--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,11 @@
       height: 100%;
     }
 
-    .icon-custom-triangle {
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="#3CAA82" width="270" height="240"><path d="M8,40 l 15,-27 l 15,27 z"/></svg>');
+    .icon-custom-fail {
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="8" stroke="#48a" fill="none" viewBox="0 0 120 120"><circle cx="60" cy="60" r="40"/></svg>');
     }
 
-    .icon-custom-circle {
+    .icon-custom-stop {
       background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="8" stroke="#48a" fill="none" viewBox="0 0 120 120"><circle cx="60" cy="60" r="40"/></svg>');
     }
 
@@ -36,6 +36,7 @@
   <h1>Custom Elements</h1>
 
   <div id="canvas"></div>
+  <div id="js-properties-panel"></div>
 
   <script src="./app.js"></script>
 </body>
