--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/diagram-js.css" />
   <link rel="stylesheet" href="vendor/bpmn-font/css/bpmn.css" />
   <link rel="stylesheet" href="vendor/bpmn-font/css/bpmn-embedded.css" />
+  <link rel="stylesheet" href="css/app.css" />
 
   <style type="text/css">
     html, body, #canvas, #canvas > div {
