--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,22 @@
 
   <div id="canvas"></div>
   <div id="js-properties-panel"></div>
+  
+  <ul class="buttons">
+      <li>
+          download
+      </li>
+      <li>
+          <a id="js-download-diagram" href title="download BPMN diagram">
+              BPMN diagram
+          </a>
+      </li>
+      <li>
+          <a id="js-download-svg" href title="download as SVG image">
+              SVG image
+          </a>
+      </li>
+  </ul>
 
   <script src="./app.js"></script>
 </body>
