--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,11 @@
       height: 100%;
     }
 
-    .icon-custom-fail {
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="8" stroke="#48a" fill="none" viewBox="0 0 120 120"><circle cx="60" cy="60" r="40"/></svg>');
+    .icon-custom-triangle {
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="#3CAA82" width="270" height="240"><path d="M8,40 l 15,-27 l 15,27 z"/></svg>');
     }
-
-    .icon-custom-stop {
+    .icon-custom-circle {
       background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="8" stroke="#48a" fill="none" viewBox="0 0 120 120"><circle cx="60" cy="60" r="40"/></svg>');
-    }
 
   </style>
 
@@ -38,7 +36,7 @@
 
   <div id="canvas"></div>
   <div id="js-properties-panel"></div>
-  
+
   <ul class="buttons">
       <li>
           download
